# kaspa-genesis-proof

./: .gitignore  Cargo.toml  Dockerfile  NOTEBOOK_PARITY.md  README.md  build.rs  requirements.txt  verify_kaspa_genesis.py
.github/actions/rust-native-verify/: action.yml
.github/workflows/: rust-native-ci.yml  rust-native-release.yml
docs/: SETUP_GUIDE.md  TECHNICAL_NOTES.md
rust-native-verifier/: Cargo.toml  build.rs
rust-native-verifier/src/: main.rs
src/: app.rs  checkpoint_utxo.rs  cli.rs  constants.rs  hashing.rs  lib.rs  main.rs  model.rs  output.rs  remote.rs  store.rs  test_support.rs  verify.rs
src/cli/: tests.rs
src/store/: checkpoint.rs  go.rs  mod.rs  probe.rs  rpc.rs  rust.rs  tests.rs
src/verify/: tests.rs
static/: index.html
tests/: cli.rs
tests/support/: mod.rs
verification/: checkpoint_data.json  genesis_proof.ipynb  store.py  store_checkpoint.py  store_rust.py
