[package]
name = "genesis-proof"
version = "1.0.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
blake2b_simd = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
hex = "0.4"
kaspa-muhash = "0.15.0"
prost = "0.13"
rocksdb = "0.24"
rusty-leveldb = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tokio = { version = "1.45", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["gzip", "transport"] }
tower-http = { version = "0.6", features = ["fs"] }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
