[package]
name = "rust-native-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
blake2b_simd = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
prost = "0.13"
rocksdb = "0.24"
rusty-leveldb = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
